mac: Add tracing for -[BrowserCrApplication sendEvent:].

This captures work triggered from NSEvents for tracing.

BUG=669116

Review-Url: https://codereview.chromium.org/2566443002
Cr-Commit-Position: refs/heads/master@{#437334}

Former-commit-id: ad0b46843bbcca3ef126402974d9ceaaf136bef5